fix(Button): Remove box-shadow from links
Links had a box shadow which made it look bad

--- a/src/buttons/button.module.css
+++ b/src/buttons/button.module.css
@@ -108,6 +108,7 @@
   text-decoration: none;
   padding: 0.5rem 0;
   font-weight: 600;
+  box-shadow: none;
 }
 
 .link:hover {
